--- a/.github/workflows/sonar_cloud_workflow.yml
+++ b/.github/workflows/sonar_cloud_workflow.yml
@@ -16,4 +16,4 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.FORGITHUB }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.FORSONAR }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
