--- a/.github/workflows/action_dockerhub.yml
+++ b/.github/workflows/action_dockerhub.yml
@@ -25,8 +25,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get current date
-          id: daterelise
-          run: echo "::set-output name=date::$(date +'%d-%b-%H-%M-%S')"
+        id: date
+        run: echo "::set-output name=date::$(date +'%d-%b-%H-%M-%S')"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -45,7 +45,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/devops_school:${{ steps.date.outputs.daterelise }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/devops_school:${{ steps.date.outputs.date }}
           build-args: |
             VAR1=${{ secrets.DB_ADMIN_USERNAME }}
             VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
