--- a/.github/workflows/test2_terraform.yml
+++ b/.github/workflows/test2_terraform.yml
@@ -14,9 +14,9 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: ${{ secrets.AWS_REGION }}
-  KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-  KUBE_NAMESPACE: prod
-  ECR_REPOSITORY: container_repo1
+#  KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+  KUBE_NAMESPACE: test
+  ECR_REPOSITORY: test-repo
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -35,11 +35,11 @@ jobs:
       - name: Checkout                                  
         uses: actions/checkout@v2
      
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#     - name: SonarCloud Scan
+#       uses: SonarSource/sonarcloud-github-action@master
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+#         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       
       - name: Get current date
         id: date
@@ -62,6 +62,10 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ env.RELEASE_IMAGE }}
+	  build-args: |
+            VAR1=${{ secrets.DB_ADMIN_USERNAME }}
+            VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
+            VAR3=${{ secrets.DB_URL }}
 
 
       - name: Compose YAML for initial Kubernetes deployment
