--- a/.github/workflows/deploy_ecr_eks.yml
+++ b/.github/workflows/deploy_ecr_eks.yml
@@ -70,7 +70,8 @@ jobs:
           file: ./Dockerfile
           push: true
 #          tags: ${{ env.RELEASE_IMAGE }}
-          tags: test-repo:${{ steps.date.outputs.date }}
+#          tags: test-repo:${{ steps.date.outputs.date }}
+	      tags: ${{ secrets.DOCKER_HUB_USERNAME }}/devops_school:${{ steps.date.outputs.date }}
 	      build-args: |
             VAR1=${{ secrets.DB_ADMIN_USERNAME }}
             VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
