--- a/.github/workflows/deploy_ecr_eks.yml
+++ b/.github/workflows/deploy_ecr_eks.yml
@@ -63,15 +63,15 @@ jobs:
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
-#        env:                                                                                                          
-#          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
+        env:
+          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
         with:
           context: ./
           file: ./Dockerfile
           push: true
-#          tags: ${{ env.RELEASE_IMAGE }}
+          tags: ${{ env.RELEASE_IMAGE }}
 #          tags: test-repo:${{ steps.date.outputs.date }}
-	      tags: ${{ secrets.DOCKER_HUB_USERNAME }}/devops_school:${{ steps.date.outputs.date }}
+#          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/devops_school:${{ steps.date.outputs.date }}
 	      build-args: |
             VAR1=${{ secrets.DB_ADMIN_USERNAME }}
             VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
