--- a/.github/workflows/deploy_ecr_eks.yml
+++ b/.github/workflows/deploy_ecr_eks.yml
@@ -75,7 +75,7 @@ jobs:
 	      build-args: |
             VAR1=${{ secrets.DB_ADMIN_USERNAME }}
             VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
-            VAR3=${{ secrets.DB_URL }}
+#            VAR3=${{ secrets.DB_URL }}
 
       - name: Compose YAML for initial Kubernetes deployment
         env:
