--- a/.github/workflows/deploy_ecr_eks.yml
+++ b/.github/workflows/deploy_ecr_eks.yml
@@ -56,9 +56,9 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
+#      - name: Set up Docker Buildx
+#        id: buildx
+#        uses: docker/setup-buildx-action@v1
     
       - name: Build and push
         id: docker_build
@@ -70,10 +70,11 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ env.RELEASE_IMAGE }}
-          build-args: |
-            VAR1=${{ secrets.DB_ADMIN_USERNAME }}
-            VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
-            VAR3=${{ secrets.DB_URL }}
+#          build-args: |
+#            VAR1=${{ secrets.DB_ADMIN_USERNAME }}
+#            VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
+#            VAR3=${{ secrets.DB_URL }}
+          build-args: VAR1=${{ secrets.DB_ADMIN_USERNAME }},VAR2=${{ secrets.DB_ADMIN_PASSWORD }},VAR3=${{ secrets.DB_URL }}
 
       - name: Compose YAML for create namespace
         run: |
