--- a/.github/workflows/deploy_ecr_eks.yml
+++ b/.github/workflows/deploy_ecr_eks.yml
@@ -67,6 +67,7 @@ jobs:
           RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
           VAR1: ${{ secrets.DB_ADMIN_USERNAME }}
           VAR2: ${{ secrets.DB_ADMIN_PASSWORD }}
+          VAR3: ${{ secrets.DB_URL }}
         with:
           context: ./
           file: ./Dockerfile
@@ -77,7 +78,7 @@ jobs:
 #            ${{ env.VAR1 }}
 #            VAR2="${{ secrets.DB_ADMIN_PASSWORD }}"
             VAR2=${{ env.VAR2 }}
-            VAR3=${{ secrets.DB_URL }}
+            VAR3=${{ env.VAR3 }}
             VAR4=test
 
       - name: Compose YAML for create namespace
