--- a/.github/workflows/deploy_ecr_eks.yml
+++ b/.github/workflows/deploy_ecr_eks.yml
@@ -74,9 +74,9 @@ jobs:
           push: true
           tags: ${{ env.RELEASE_IMAGE }}
           build-args: |
-#            VAR1="${{ secrets.DB_ADMIN_USERNAME }}"
-#            ${{ env.VAR1 }}
-#            VAR2="${{ secrets.DB_ADMIN_PASSWORD }}"
+            VAR1="${{ secrets.DB_ADMIN_USERNAME }}"
+#            VAR1=${{ env.VAR1 }}
+            VAR2="${{ secrets.DB_ADMIN_PASSWORD }}"
 #            VAR2=${{ env.VAR2 }}
 #            VAR3=${{ env.VAR3 }}
             VAR4=test
