--- a/.github/workflows/deploy_ecr_eks.yml
+++ b/.github/workflows/deploy_ecr_eks.yml
@@ -18,6 +18,8 @@ env:
   KUBE_NAMESPACE: flasktest
   ECR_REPOSITORY: test-repo
   DB_ADMIN_USERNAME: ${{ secrets.DB_ADMIN_USERNAME }}
+  DB_ADMIN_PASSWORD: ${{ secrets.DB_ADMIN_PASSWORD }}
+  DB_URL: ${{ secrets.DB_URL }}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -73,9 +75,8 @@ jobs:
           tags: ${{ env.RELEASE_IMAGE }}
           build-args: |
             VAR1=${{ env.DB_ADMIN_USERNAME }}
-            VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
-            VAR3=${{ secrets.DB_URL }}
-            VAR4=test
+            VAR2=${{ env.DB_ADMIN_PASSWORD }}
+            VAR3=${{ env.DB_URL }}
 
       - name: Compose YAML for create namespace
         run: |
