--- a/.github/workflows/sonar_cloud_workflow.yml
+++ b/.github/workflows/sonar_cloud_workflow.yml
@@ -15,5 +15,5 @@ jobs:
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.FORGITHUB }}  # Needed to get PR information, if any
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
