--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -33,15 +33,17 @@ jobs:
       - name: Cancel Previous Runs               
         uses: styfle/cancel-workflow-action@0.4.1
         with:                                    
-          access_token: ${{ github.token }}
-      
+#          access_token: ${{ github.token }}
+          access_token: ${{ MY_GITHUB_TOKEN }}
+
+
       - name: Checkout                                  
         uses: actions/checkout@v2
      
 #     - name: SonarCloud Scan
 #       uses: SonarSource/sonarcloud-github-action@master
 #       env:
-#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+#         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}  # Needed to get PR information, if any
 #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       
       - name: Get current date
