--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -14,6 +14,7 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: ${{ secrets.AWS_REGION }}
+  MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
   KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
   KUBE_NAMESPACE: flasktest
   ECR_REPOSITORY: Project-repo
@@ -34,8 +35,7 @@ jobs:
         uses: styfle/cancel-workflow-action@0.4.1
         with:                                    
 #          access_token: ${{ github.token }}
-          access_token: ${{ MY_GITHUB_TOKEN }}
-
+          access_token: ${{ env.MY_GITHUB_TOKEN }}
 
       - name: Checkout                                  
         uses: actions/checkout@v2
