--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -20,7 +20,7 @@ env:
   ECR_REPOSITORY: test-repo
   DB_ADMIN_USERNAME: ${{ secrets.DB_ADMIN_USERNAME }}
   DB_ADMIN_PASSWORD: ${{ secrets.DB_ADMIN_PASSWORD }}
-  DB_URL: ${{ secrets.DB_URL }}
+  DB_URL: ${{ secrets.PROD_DB_URL }}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -80,15 +80,15 @@ jobs:
             VAR2=${{ env.DB_ADMIN_PASSWORD }}
             VAR3=${{ env.DB_URL }}
 
-      - name: Compose YAML for create dev namespace
-        run: |
-          printf "apiVersion: v1\nkind: Namespace\nmetadata:\n name: ${{ env.KUBE_NAMESPACE }}" > k8ns.yaml
+#      - name: Compose YAML for create prod namespace
+#        run: |
+#          printf "apiVersion: v1\nkind: Namespace\nmetadata:\n name: ${{ env.KUBE_NAMESPACE }}" > k8ns.yaml
 
       - name: Compose YAML for initial Kubernetes deployment
         env:
           RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
         run: |
-          printf "apiVersion: apps/v1\nkind: Deployment\nmetadata:\n  name: flaskappdev\n  namespace: ${{ env.KUBE_NAMESPACE }}\n  labels:\n    app: flaskapptest\nspec:\n  replicas: 2\n  selector:\n    matchLabels:\n      app: flaskappdev\n  template:\n    metadata:\n      name: flasktemplate1\n      labels:\n        app: flaskappdev\n    spec:\n      containers:\n      - image: ${{ env.RELEASE_IMAGE }}\n        name: flaskcontainer\n        env:\n        - name: DB_ADMIN_USERNAME\n          value: ${{ env.DB_ADMIN_USERNAME}}\n        - name: DB_ADMIN_PASSWORD\n          value: ${{ env.DB_ADMIN_PASSWORD}}\n        - name: DB_URL\n          value: ${{ env.DB_URL}}" > k8s.yaml
+          printf "apiVersion: apps/v1\nkind: Deployment\nmetadata:\n  name: flaskappprod\n  namespace: ${{ env.KUBE_NAMESPACE }}\n  labels:\n    app: flaskapptest\nspec:\n  replicas: 2\n  selector:\n    matchLabels:\n      app: flaskappdev\n  template:\n    metadata:\n      name: flasktemplate1\n      labels:\n        app: flaskappdev\n    spec:\n      containers:\n      - image: ${{ env.RELEASE_IMAGE }}\n        name: flaskcontainer\n        env:\n        - name: DB_ADMIN_USERNAME\n          value: ${{ env.DB_ADMIN_USERNAME}}\n        - name: DB_ADMIN_PASSWORD\n          value: ${{ env.DB_ADMIN_PASSWORD}}\n        - name: DB_URL\n          value: ${{ env.DB_URL}}" > k8s.yaml
 
       - name: Check deployment status
         id: deploy_status
@@ -104,25 +104,25 @@ jobs:
         run: |
           echo  ${{ steps.deploy_status.outputs.result }}
 
-      - name: Create dev namespaces
-        if: contains( env.DEPLOY_STATUS, 'flaskdev') != 'true'
-        uses: kodermax/kubectl-aws-eks@master
-        with:
-          args: apply -f k8ns.yaml
-      
+#      - name: Create prod namespaces
+#        if: contains( env.DEPLOY_STATUS, 'flaskprod') != 'true'
+#        uses: kodermax/kubectl-aws-eks@master
+#        with:
+#          args: apply -f k8ns.yaml
+
       - name: Create new Kubernetes deployment
-        if: contains( env.DEPLOY_STATUS, 'flaskappdev') != 'true'
+        if: contains( env.DEPLOY_STATUS, 'flaskappprod') != 'true'
         uses: kodermax/kubectl-aws-eks@master                                                                         
         env:                                                                                                          
           RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
         with:                                                                                                         
           args: apply -f k8s.yaml
 
-      - name: Create new Dev load balancer
-        if: contains( env.DEPLOY_STATUS, 'elb-dev') != 'true'
+      - name: Create new Prod load balancer
+        if: contains( env.DEPLOY_STATUS, 'elb-prod') != 'true'
         uses: kodermax/kubectl-aws-eks@master
         with:
-          args: expose deployment flaskappdev -n flaskdev --port=80 --target-port=80 --type=LoadBalancer --name=elb-dev
+          args: expose deployment flaskappprod -n flaskprod --port=80 --target-port=80 --type=LoadBalancer --name=elb-prod
 
 
       - name: Update test Kubernetes deployment
