--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -84,25 +84,25 @@ jobs:
 #        run: |
 #          printf "apiVersion: v1\nkind: Namespace\nmetadata:\n name: ${{ env.KUBE_NAMESPACE }}" > k8ns.yaml
 
-      - name: Compose YAML for initial Kubernetes deployment
-        env:
-          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
-        run: |
-          printf "apiVersion: apps/v1\nkind: Deployment\nmetadata:\n  name: flaskappprod\n  namespace: ${{ env.KUBE_NAMESPACE }}\n  labels:\n    app: flaskapptest\nspec:\n  replicas: 2\n  selector:\n    matchLabels:\n      app: flaskappdev\n  template:\n    metadata:\n      name: flasktemplate1\n      labels:\n        app: flaskappdev\n    spec:\n      containers:\n      - image: ${{ env.RELEASE_IMAGE }}\n        name: flaskcontainer\n        env:\n        - name: DB_ADMIN_USERNAME\n          value: ${{ env.DB_ADMIN_USERNAME}}\n        - name: DB_ADMIN_PASSWORD\n          value: ${{ env.DB_ADMIN_PASSWORD}}\n        - name: DB_URL\n          value: ${{ env.DB_URL}}" > k8s.yaml
+#      - name: Compose YAML for initial Kubernetes deployment
+#        env:
+#          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
+#        run: |
+#          printf "apiVersion: apps/v1\nkind: Deployment\nmetadata:\n  name: flaskappprod\n  namespace: ${{ env.KUBE_NAMESPACE }}\n  labels:\n    app: flaskapptest\nspec:\n  replicas: 2\n  selector:\n    matchLabels:\n      app: flaskappdev\n  template:\n    metadata:\n      name: flasktemplate1\n      labels:\n        app: flaskappdev\n    spec:\n      containers:\n      - image: ${{ env.RELEASE_IMAGE }}\n        name: flaskcontainer\n        env:\n        - name: DB_ADMIN_USERNAME\n          value: ${{ env.DB_ADMIN_USERNAME}}\n        - name: DB_ADMIN_PASSWORD\n          value: ${{ env.DB_ADMIN_PASSWORD}}\n        - name: DB_URL\n          value: ${{ env.DB_URL}}" > k8s.yaml
 
-      - name: Check deployment status
-        id: deploy_status
+#      - name: Check deployment status
+#        id: deploy_status
 #        uses: Consensys/kubernetes-action@master
-        uses: kodermax/kubectl-aws-eks@master
-        with:
+#        uses: kodermax/kubectl-aws-eks@master
+#        with:
 #          args: get deploy -A
-          args: get all -A
+#          args: get all -A
 
-      - name: Print deployment status and ENV
-        env:
-          DEPLOY_STATUS: ${{ steps.deploy_status.outputs.result }}
-        run: |
-          echo  ${{ steps.deploy_status.outputs.result }}
+#      - name: Print deployment status and ENV
+#        env:
+#          DEPLOY_STATUS: ${{ steps.deploy_status.outputs.result }}
+#        run: |
+#          echo  ${{ steps.deploy_status.outputs.result }}
 
 #      - name: Create prod namespaces
 #        if: contains( env.DEPLOY_STATUS, 'flaskprod') != 'true'
@@ -110,23 +110,23 @@ jobs:
 #        with:
 #          args: apply -f k8ns.yaml
 
-      - name: Create new Kubernetes deployment
-        if: contains( env.DEPLOY_STATUS, 'flaskappprod') != 'true'
-        uses: kodermax/kubectl-aws-eks@master                                                                         
-        env:                                                                                                          
-          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
-        with:                                                                                                         
-          args: apply -f k8s.yaml
+#      - name: Create new Kubernetes deployment
+#        if: contains( env.DEPLOY_STATUS, 'flaskappprod') != 'true'
+#        uses: kodermax/kubectl-aws-eks@master
+#        env:
+#          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
+#        with:
+#          args: apply -f k8s.yaml
 
-      - name: Create new Prod load balancer
-        if: contains( env.DEPLOY_STATUS, 'elb-prod') != 'true'
-        uses: kodermax/kubectl-aws-eks@master
-        with:
-          args: expose deployment flaskappprod -n flaskprod --port=80 --target-port=80 --type=LoadBalancer --name=elb-prod
+#      - name: Create new Prod load balancer
+#        if: contains( env.DEPLOY_STATUS, 'elb-prod') != 'true'
+#        uses: kodermax/kubectl-aws-eks@master
+#        with:
+#          args: expose deployment flaskappprod -n flaskprod --port=80 --target-port=80 --type=LoadBalancer --name=elb-prod
 
 
       - name: Update test Kubernetes deployment
-        if: contains( env.DEPLOY_STATUS, 'flaskappdev') == 'true'
+#        if: contains( env.DEPLOY_STATUS, 'flaskappdev') == 'true'
         uses: kodermax/kubectl-aws-eks@master                                                                         
         env:                                                                                                          
           RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
