--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -131,4 +131,4 @@ jobs:
         env:                                                                                                          
           RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
         with:                                                                                                         
-          args: set image deployment/flaskappdev flaskcontainer=${{ env.RELEASE_IMAGE }} -n ${{ env.KUBE_NAMESPACE }}
+          args: set image deployment/flaskappprod flaskcontainer=${{ env.RELEASE_IMAGE }} -n ${{ env.KUBE_NAMESPACE }}
