--- a/.github/workflows/deploy_initial.yml
+++ b/.github/workflows/deploy_initial.yml
@@ -41,11 +41,11 @@ jobs:
       - name: Checkout                                  
         uses: actions/checkout@v2
      
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#      - name: SonarCloud Scan
+#        uses: SonarSource/sonarcloud-github-action@master
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}  # Needed to get PR information, if any
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       
       - name: Get current date
         id: date
@@ -93,7 +93,7 @@ jobs:
         env:
           RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
         run: |
-          printf "apiVersion: apps/v1\nkind: Deployment\nmetadata:\n  name: flaskappdev\n  namespace: ${{ env.DEV_KUBE_NAMESPACE }}\n  labels:\n    app: flaskappdev\nspec:\n  replicas: 1\n  selector:\n    matchLabels:\n      app: flaskappdev\n  template:\n    metadata:\n      name: flasktemplate1\n      labels:\n        app: flaskappdev\n    spec:\n      containers:\n      - image: ${{ env.RELEASE_IMAGE }}\n        name: flaskcontainer\n        resources:\n          requests:\n          memory: "50Mi"\n          cpu: "150m"\n          limits:\n          memory: "100Mi"\n          cpu: "500m"\n        env:\n        - name: DB_ADMIN_USERNAME\n          value: ${{ env.DB_ADMIN_USERNAME}}\n        - name: DB_ADMIN_PASSWORD\n          value: ${{ env.DB_ADMIN_PASSWORD}}\n        - name: DB_URL\n          value: ${{ env.DEV_DB_URL}}" > k8sdev.yaml
+          printf "apiVersion: apps/v1\nkind: Deployment\nmetadata:\n  name: flaskappdev\n  namespace: ${{ env.DEV_KUBE_NAMESPACE }}\n  labels:\n    app: flaskappdev\nspec:\n  replicas: 1\n  selector:\n    matchLabels:\n      app: flaskappdev\n  template:\n    metadata:\n      name: flasktemplate1\n      labels:\n        app: flaskappdev\n    spec:\n      containers:\n      - image: ${{ env.RELEASE_IMAGE }}\n        name: flaskcontainer\n        resources:\n          requests:\n            memory: "50Mi"\n            cpu: "150m"\n          limits:\n            memory: "100Mi"\n            cpu: "500m"\n        env:\n        - name: DB_ADMIN_USERNAME\n          value: ${{ env.DB_ADMIN_USERNAME}}\n        - name: DB_ADMIN_PASSWORD\n          value: ${{ env.DB_ADMIN_PASSWORD}}\n        - name: DB_URL\n          value: ${{ env.DEV_DB_URL}}" > k8sdev.yaml
 
       - name: Compose YAML for initial Kubernetes deployment PROD
         env:
